--- a/eosc/eosc_visual_studio/firewall_tunnel/firewall_tunnel.vcxproj.filters
+++ b/eosc/eosc_visual_studio/firewall_tunnel/firewall_tunnel.vcxproj.filters
@@ -23,7 +23,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\firewall_tunnel.cpp">
+    <ClCompile Include="firewall_tunnel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="server.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
