--- a/eosc/eosc_visual_studio/eosc/eosc.vcxproj.filters
+++ b/eosc/eosc_visual_studio/eosc/eosc.vcxproj.filters
@@ -24,12 +24,21 @@
     <ClInclude Include="..\..\eosc_commands\eosc_get_commands.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\eosc.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\eosc_test.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\eosc_commands\eosc_command.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\eosc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\eosc_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
