--- a/firewall_tunnel/tunnel_visual_studio/firewall_tunnel/firewall_tunnel.vcxproj
+++ b/firewall_tunnel/tunnel_visual_studio/firewall_tunnel/firewall_tunnel.vcxproj
@@ -159,9 +159,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="tunnel.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="tunnel.cpp" />
+    <ClCompile Include="..\..\tunnel.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
