--- a/eosc/eosc_visual_studio/eosc/eosc.vcxproj
+++ b/eosc/eosc_visual_studio/eosc/eosc.vcxproj
@@ -154,12 +154,16 @@
     <ClInclude Include="..\..\eosc.hpp" />
     <ClInclude Include="..\..\eosc_commands\eosc_command.hpp" />
     <ClInclude Include="..\..\eosc_commands\eosc_get_commands.hpp" />
+    <ClInclude Include="..\..\eosc_commands\eosc_wallet_commands.hpp" />
     <ClInclude Include="..\..\eosc_test.hpp" />
+    <ClInclude Include="..\..\subcommands.hpp" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\eosc.cpp" />
     <ClCompile Include="..\..\eosc_commands\eosc_command.cpp" />
+    <ClCompile Include="..\..\eosc_commands\eosc_get_commands.cpp" />
+    <ClCompile Include="..\..\eosc_commands\eosc_wallet_commands.cpp" />
     <ClCompile Include="..\..\eosc_test.cpp" />
   </ItemGroup>
   <ItemGroup>
