--- a/eosc/eosc_visual_studio/eosc/eosc.vcxproj.filters
+++ b/eosc/eosc_visual_studio/eosc/eosc.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClInclude Include="..\..\eosc_test.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\subcommands.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\eosc_commands\eosc_wallet_commands.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\eosc_commands\eosc_command.cpp">
@@ -39,6 +45,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\eosc_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\eosc_commands\eosc_get_commands.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\eosc_commands\eosc_wallet_commands.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
