--- a/eosc/eosc_visual_studio/eoscLib/eoscLib.vcxproj.filters
+++ b/eosc/eosc_visual_studio/eoscLib/eoscLib.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="..\..\eosclib\subcommands.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\eosc_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
